--- a/website/foosleague/static/css/main.css
+++ b/website/foosleague/static/css/main.css
@@ -906,13 +906,13 @@ body {
   .l-columns--centeredSmall .l-col:last-child {
     margin-right: 0; }
 
-.l-columns--centeredSmall .l-col {
+.l-columns--score .l-col {
   float: left;
   display: block;
   margin-right: 2.35765%;
   width: 31.76157%;
   margin-left: 34.11922%; }
-  .l-columns--centeredSmall .l-col:last-child {
+  .l-columns--score .l-col:last-child {
     margin-right: 0; }
 
 .l-columns--sideright .l-col {
